# node-control-panel

./: .env  .env.example  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  frontend-api.json
src-tauri/src/: main.rs
src-tauri/src/commands/: init.rs  logs.rs  mod.rs  node.rs  status.rs
src-tauri/src/node_manager/: config.rs  init.rs  installer.rs  logs.rs  mod.rs  process.rs  status.rs  types.rs
src/components/: Dashboard.jsx  Layout.jsx  LogsPage.jsx  LogsViewer.jsx  SettingsPage.jsx  SetupWizard.jsx
