[package]
name = "synergy-control-panel"
version = "1.0.0"
description = "Synergy Network Node Control Panel"
authors = ["Synergy Network"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
